# project-archaeologist

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
src/: deps.rs  dupes.rs  git.rs  imports.rs  main.rs  report.rs  scan.rs  stack.rs
templates/: report.html
tools/: make-icons.js
